--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     build: .
     container_name: bank-of-ideas
     ports:
-      - "5000:4000"
+      - "${WEB_PORT:-4000}:4000"
     volumes:
       - ./static/uploads:/app/static/uploads
     environment:
