إصلاح: إضافة دعم OAUTHLIB_INSECURE_TRANSPORT للعمل خلف reverse proxy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       - GOOGLE_OAUTH_CLIENT_ID=${GOOGLE_OAUTH_CLIENT_ID}
       - GOOGLE_OAUTH_CLIENT_SECRET=${GOOGLE_OAUTH_CLIENT_SECRET}
       - SERVER_NAME=${SERVER_NAME}
+      - OAUTHLIB_INSECURE_TRANSPORT=${OAUTHLIB_INSECURE_TRANSPORT}
     depends_on:
       db:
         condition: service_healthy
