إضافة PREFERRED_URL_SCHEME إلى docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,8 @@ services:
       - GOOGLE_OAUTH_CLIENT_ID=${GOOGLE_OAUTH_CLIENT_ID}
       - GOOGLE_OAUTH_CLIENT_SECRET=${GOOGLE_OAUTH_CLIENT_SECRET}
       - SERVER_NAME=${SERVER_NAME}
-      - OAUTHLIB_INSECURE_TRANSPORT=${OAUTHLIB_INSECURE_TRANSPORT}
+      - OAUTHLIB_INSECURE_TRANSPORT=${OAUTHLIB_INSECURE_TRANSPORT:-1}
+      - PREFERRED_URL_SCHEME=${PREFERRED_URL_SCHEME:-https}
     depends_on:
       db:
         condition: service_healthy
