--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,5 @@ Flask-Dance==7.0.0
 oauthlib==3.2.2
 requests-oauthlib==1.3.1
 psycopg2-binary==2.9.9
-gunicorn==21.2.0 
+gunicorn==21.2.0
+Pillow==10.2.0 
